# PCAPReceiver

./: PCAPReceiver-debug-v1.0.0.apk.sha256  build.gradle  settings.gradle
.github/workflows/: build-apk.yml  release.yml
app/: build.gradle
app/src/main/java/com/emanuelef/pcap_receiver/: CaptureThread.java  MainActivity.java
jni/: Cargo.toml
jni/.cargo/: config.toml
jni/src/: lib.rs
