[package]
name = "artifactarium-jni"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
auto-artifactarium = { git = "https://github.com/konkers/auto-artifactarium" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
once_cell = "1.19"
